--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 22 15:28:40 COT 2017
-sdk.dir=C\:\\Users\\Anwera97\\AppData\\Local\\Android\\Sdk
+#Fri Nov 24 08:41:50 PET 2017
+sdk.dir=/Users/anton/Library/Android/sdk
